# Self-Storage-scraper

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: weekly-storage-monitor.yml
src/storage_monitor/: __init__.py  cli.py  logging_utils.py  pipeline.py  sampling.py  settings.py
src/storage_monitor/adapters/: __init__.py  base.py  cubesmart.py  extraspace.py  publicstorage.py
src/storage_monitor/models/: __init__.py  records.py
src/storage_monitor/normalization/: __init__.py  parsing.py
src/storage_monitor/reporting/: __init__.py  summary.py
src/storage_monitor/storage/: __init__.py  repository.py
src/storage_monitor/utils/: browser.py  files.py  http.py
tests/: test_adapters.py  test_deltas.py  test_normalization.py
tests/fixtures/: cubesmart_facility.html  extraspace_facility.html  publicstorage_facility.html
